// Copyright 2020 The Measurement System Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.duchy;

import "src/main/proto/wfa/measurement/internal/duchy/computation_details.proto";

option java_package = "org.wfanet.measurement.internal.duchy";
option java_multiple_files = true;

// Service for persisting computation related measurements.
service ComputationStats {
  // Persists a ComputationStat.
  rpc CreateComputationStat(CreateComputationStatRequest) returns (CreateComputationStatResponse) {}
}

// Request to create a new computation stat.
message CreateComputationStatRequest {
  // Identifier for the computation used locally.
  int64 local_computation_id = 1;
  // The global identifier of the computation,
  string global_computation_id = 2;
  // The stage of the computation.
  int32 computation_stage = 3;
  // The number of the current attempt of the stage.
  int32 attempt = 4;
  // The role the duchy is playing in the computation. Depending on the
  // role a duchy may be expected to execute different logic at different
  // steps of the computation.
  ComputationDetails.RoleInComputation role = 5;
  // Name of the metric that is being measured e.g. crypto_cpu_time_millis.
  string metric_name = 7;
  // Numerical value of the measurement.
  int64 metric_value = 8;
}

message CreateComputationStatResponse {
  // Deliberately empty
}